@@ -2,8 +2,13 @@
 SVN
 -------------------------------
 
+XML:   Resolved issue CASTOR-1630 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
+       Added support for XML schema type 'unsignedShort' to XML code generator.
+       Details: http://jira.codehaus.org/browse/CASTOR-1630
+       (Werner - 20061017)
+
 XML:   Resolved issue CASTOR-1629 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
-       Added support for XML schema type 'unsigned' to XML code generator.
+       Added support for XML schema type 'unsignedInt' to XML code generator.
        Details: http://jira.codehaus.org/browse/CASTOR-1629
        (Werner - 20061017)
 
